@@ -1,0 +1,4 @@
+/* { dg-lto-options "-w" } */
+
+double i;
+int j;
