@@ -1,0 +1,4 @@
+double j;
+int i;
+int main () { return i; }
+
